--- a/motivation/Gemfile
+++ b/motivation/Gemfile
@@ -31,6 +31,8 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 # Use ActiveModel has_secure_password
 gem 'bcrypt', '~> 3.1.7'
 
+gem "will_paginate"
+
 # Use Unicorn as the app server
 # gem 'unicorn'
 
@@ -40,7 +42,6 @@ gem 'bcrypt', '~> 3.1.7'
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
-  gem 'sqlite3'
 end
 
 group :development do
