Add top videos and top image section. Top videos needs pagination

--- a/motivation/Gemfile
+++ b/motivation/Gemfile
@@ -38,6 +38,8 @@ gem "fastimage"
 
 gem 'pg'
 
+gem 'will_paginate-bootstrap'
+
 gem "rails_12factor", group: :production
 # Use Unicorn as the app server
 # gem 'unicorn'
